--- a/newsite/blender/cmyk.html
+++ b/newsite/blender/cmyk.html
@@ -10,7 +10,7 @@
     <body><div class="page"><div class="main">
         <h1>cmyk</h1>
         ← <a class="back" href="/website/newsite/blender">back</a>
-        <img src="/website/blender/cmyk/cmyk.png" alt="cmyk" width="100%">
+        <img src="/website/blender/cmyk/cmyk.png" alt="cmyk" width="100%" style="padding-top: 20px">
         <img src="/website/blender/cmyk/cmyk3.png" alt="cmyk3" width="100%">
         <img src="/website/blender/cmyk/cmyk4.png" alt="cmyk4" width="100%">
         <img src="/website/blender/cmyk/cmyk7.png" alt="cmyk7" width="100%">
