--- a/newsite/blender/pyramids.html
+++ b/newsite/blender/pyramids.html
@@ -7,12 +7,13 @@
         <title>blender: pyramids</title>
         <link href="/website/newsite/styles/style.css" rel="stylesheet" type="text/css" media="all"><style>
         body {background-color: #000429;color: #ddba39;}
+        a{color: #ddba39}
         .page{border-color: #ddba39}
     </style></head>
     <body><div class="page"><div class="main">
         <h1>pyramids</h1>
-        ← <a class="back" href="/website/newsite/blender">back</a>
-        <img src="/website/blender/pyramids/pyramids.png" alt="pyramids" width="100%">
+        ← <a class="back" href="/website/newsite/blender" >back</a>
+        <img src="/website/blender/pyramids/pyramids.png" alt="pyramids" width="100%" style="padding-top:20px">
         <img src="/website/blender/pyramids/pyramids2.png" alt="pyramids2" width="100%">
         <img src="/website/blender/pyramids/pyramids3.png" alt="pyramids3" width="100%">
         <img src="/website/blender/pyramids/pyramids4.png" alt="pyramids4" width="100%">
