--- a/newsite/blender/pyramids.html
+++ b/newsite/blender/pyramids.html
@@ -8,6 +8,7 @@
         <link href="/website/newsite/styles/style.css" rel="stylesheet" type="text/css" media="all"><style>
         body {background-color: #000429;color: #ddba39;}
         a{color: #ddba39}
+        a:hover{color: #000429; background-color: #ddba39; text-decoration-color: #ddba39;}
         .page{border-color: #ddba39}
     </style></head>
     <body><div class="page"><div class="main">
