--- a/blender/buttons.html
+++ b/blender/buttons.html
@@ -5,12 +5,12 @@
         <link href="https://fonts.googleapis.com/css2?family=Inter:wght@800&display=swap" rel="stylesheet"> 
         <meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1">
         <title>blender: buttons</title>
-        <link href="/website/newsite/styles/style.css" rel="stylesheet" type="text/css" media="all"><style>
+        <link href="/website/styles/style.css" rel="stylesheet" type="text/css" media="all"><style>
         </style></head>
 
     <body><div class="page"><div class="main">
         <h1>buttons</h1>
-        ← <a class="back" href="/website/newsite/blender">back</a>
+        ← <a class="back" href="/website/blender">back</a>
         <p>I normally make still renders, but today i felt like making buttons, so i made these as a challenge, i guess.</p>
         <p>One with cubes walking:</p>
         <img src="/website/blender/buttons/walking.gif" alt="walking">
