--- a/blender/cmyk.html
+++ b/blender/cmyk.html
@@ -5,11 +5,11 @@
         <link href="https://fonts.googleapis.com/css2?family=Inter:wght@800&display=swap" rel="stylesheet"> 
         <meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1">
         <title>blender: cmyk</title>
-        <link href="/website/newsite/styles/style.css" rel="stylesheet" type="text/css" media="all"></head>
+        <link href="/website/styles/style.css" rel="stylesheet" type="text/css" media="all"></head>
 
     <body><div class="page"><div class="main">
         <h1>cmyk</h1>
-        ← <a class="back" href="/website/newsite/blender">back</a>
+        ← <a class="back" href="/website/blender">back</a>
         <img src="/website/blender/cmyk/cmyk.png" alt="cmyk" width="100%" style="padding-top: 20px">
         <img src="/website/blender/cmyk/cmyk3.png" alt="cmyk3" width="100%">
         <img src="/website/blender/cmyk/cmyk4.png" alt="cmyk4" width="100%">
