--- a/blender/pyramids.html
+++ b/blender/pyramids.html
@@ -5,7 +5,7 @@
         <link href="https://fonts.googleapis.com/css2?family=Inter:wght@800&display=swap" rel="stylesheet"> 
         <meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1">
         <title>blender: pyramids</title>
-        <link href="/website/newsite/styles/style.css" rel="stylesheet" type="text/css" media="all"><style>
+        <link href="/website/styles/style.css" rel="stylesheet" type="text/css" media="all"><style>
         body {background-color: #000429;color: #ddba39;}
         a{color: #ddba39}
         a:hover{color: #000429; background-color: #ddba39; text-decoration-color: #ddba39;}
@@ -13,7 +13,7 @@
     </style></head>
     <body><div class="page"><div class="main">
         <h1>pyramids</h1>
-        ← <a class="back" href="/website/newsite/blender" >back</a>
+        ← <a class="back" href="/website/blender" >back</a>
         <img src="/website/blender/pyramids/pyramids.png" alt="pyramids" width="100%" style="padding-top:20px">
         <img src="/website/blender/pyramids/pyramids2.png" alt="pyramids2" width="100%">
         <img src="/website/blender/pyramids/pyramids3.png" alt="pyramids3" width="100%">
