--- a/doodles/etc.html
+++ b/doodles/etc.html
@@ -4,9 +4,9 @@
         <link href="https://fonts.googleapis.com/css2?family=Libre+Baskerville:ital,wght@0,400;0,700;1,400&display=swap" rel="stylesheet"> 
         <meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1">
         <title>etc</title>
-        <link href="/website/newsite/styles/style.css" rel="stylesheet" type="text/css" media="all">
+        <link href="/website/styles/style.css" rel="stylesheet" type="text/css" media="all">
     <style>
-        body{background-image:url(/website/newsite/doodles/background.jpg);
+        body{background-image:url(background.jpg);
             background-repeat:no-repeat;
             background-size:cover;
             color: #101010;
@@ -32,7 +32,7 @@
 
     <body>
     <div class="page"><div class="main">
-        <img src="etcheader.gif" alt="etc" style="width: 60%" class="header"><br>< <a class="back" href="/website/newsite/doodles">home</a>
+        <img src="etcheader.gif" alt="etc" style="width: 60%" class="header"><br>< <a class="back" href="/website/doodles">home</a>
         <div id="drawings">
         <img src="etc/creatures2.jpg" alt="creatures2">
         <img src="etc/noise.jpg" alt="noise">
