--- a/doodles/people.html
+++ b/doodles/people.html
@@ -32,7 +32,7 @@
 
     <body>
         <div class="page"><div class="main">
-        <img src="peopleheader.gif" alt="people" style="width: 60%" class="header"><br>< <a class="back" href="/website/newsite/doodles">home</a>
+        <img src="peopleheader.gif" alt="people" style="width: 60%" class="header"><br>< <a class="back" href="/website/doodles">home</a>
         <div id="drawings">
         <img src="people/guy2.jpg" alt="guy2">
         <img src="people/pointing.jpg" alt="pointing">
