--- a/misc/folder.html
+++ b/misc/folder.html
@@ -4,7 +4,7 @@
         <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@400;700&display=swap" rel="stylesheet"> 
         <meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1">
         <title>> folder</title>
-        <link href="/website/newsite/styles/miscstyle.css" rel="stylesheet" type="text/css" media="all"><style>
+        <link href="/website/styles/miscstyle.css" rel="stylesheet" type="text/css" media="all"><style>
         details{max-width: 750px;
         border-left: solid #15c405 3px;
         padding: 0 13px;
@@ -15,13 +15,13 @@
 
     <body><div class="page"><div class="main">
     <h1>folder</h1>
-    < <a class="back" href="/website/newsite/misc">go back</a>
+    < <a class="back" href="/website/misc">go back</a>
     <p>You open the folder.</p></div>
     <details>
         <summary><a>index(es)</a></summary>
         <ul>
             <li><a href="folder/index">index</a>: an earlier version of the start page with a sidebar and descriptions for pages.</li>
-            <li><a href="/website/newsite/index">index2</a>: refer to <a href="journal#home">journal entry.</a></li>
+            <li><a href="/website/index">index2</a>: refer to <a href="journal#home">journal entry.</a></li>
         </ul>
         <details>
             <summary><a>earlier version of intro text</a>: I wanted to change this to be more about the site (or as best as i could), 
