--- a/misc/phrases.html
+++ b/misc/phrases.html
@@ -4,7 +4,7 @@
         <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@400;700&display=swap" rel="stylesheet"> 
         <meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1">
         <title>> wall</title>
-        <link href="/website/newsite/styles/miscstyle.css" rel="stylesheet" type="text/css" media="all"><style>
+        <link href="/website/styles/miscstyle.css" rel="stylesheet" type="text/css" media="all"><style>
         #notes{display: grid;
             grid-template-columns: auto auto;
             margin: 2vh auto 0 auto; gap: 20px;
@@ -21,7 +21,7 @@
 
     <body><div class="page"><div class="main">
     <h1>wall</h1>
-    < <a class="back" href="/website/newsite/misc">go back</a>
+    < <a class="back" href="/website/misc">go back</a>
     <p>You look closer at the sticky notes on the wall.
     </p>
     <div id="notes">
