--- a/misc/folder/handdrawn.html
+++ b/misc/folder/handdrawn.html
@@ -6,7 +6,7 @@
         <title>{handdrawn}</title>
         <link href="istyle.css" rel="stylesheet" type="text/css" media="all">
     <style>
-        body{background-image:url(/website/doodles/old_background.jpg);
+        body{background-image:url(old_background.jpg);
             background-repeat:no-repeat;
             background-size:cover;
             padding-left: 250px;
@@ -17,7 +17,7 @@
     </head>
 
     <body>
-        <img src="/website/doodles/header.png" alt="{handdrawn}" style="height:120px;">
+        <img src="header.png" alt="{handdrawn}" style="height:120px;">
         <p style="margin-left: 100px;">
             this page currently doesn't<br>
             contain anything, but i hope to<br>
@@ -34,5 +34,5 @@
             drawings! (when i put them here)
         </p>
     <br><a href="/website/misc/folder" style="margin-left: 100px;">go back</a>
-    <img src="/website/doodles/me_i_guess.png" alt="me i guess" style="margin: -20em 0 0 30em">
+    <img src="me_i_guess.png" alt="me i guess" style="margin: -20em 0 0 30em">
     </body>
