--- a/websites/geo.html
+++ b/websites/geo.html
@@ -3,11 +3,11 @@
     <head>
         <meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1">
         <title>websites: geography</title>
-        <link href="/website/newsite/styles/sitestyle.css" rel="stylesheet" type="text/css" media="all"><style>
+        <link href="/website/styles/sitestyle.css" rel="stylesheet" type="text/css" media="all"><style>
         </style></head>
     <body><div class="page"><div class="main">
         <h1>geography and flags</h1>
-        ← <a class="back" href="/website/newsite/websites">back</a>
+        ← <a class="back" href="/website/websites">back</a>
         <h2>→ <a href="https://www.jasondavies.com/maps/transition/">Map Projection Transitions</a></h2>
         <p>An awesome visualization by Jason Davies of many map projections. <a href="https://www.jasondavies.com/maps/">Their website</a> also has many other cool map stuffs.</p>
 
