--- a/websites/lang.html
+++ b/websites/lang.html
@@ -3,11 +3,11 @@
     <head>
         <meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1">
         <title>websites: lang</title>
-        <link href="/website/newsite/styles/sitestyle.css" rel="stylesheet" type="text/css" media="all"><style>
+        <link href="/website/styles/sitestyle.css" rel="stylesheet" type="text/css" media="all"><style>
         </style></head>
     <body><div class="page"><div class="main">
         <h1>language</h1>
-        ← <a class="back" href="/website/newsite/websites">back</a>
+        ← <a class="back" href="/website/websites">back</a>
         <h2>→ <a href="https://decodeunicode.org/">decodeunicode</a></h2>
         <p>A site with characters from a TON of languages from all around the world, as encoded by Unicode 11.0 (kinda out of date but still awesome). By Johhannes Bergerhausen and Siri Poarangan.</p>
 
