--- a/websites/misc.html
+++ b/websites/misc.html
@@ -3,11 +3,11 @@
     <head>
         <meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1">
         <title>websites: misc</title>
-        <link href="/website/newsite/styles/sitestyle.css" rel="stylesheet" type="text/css" media="all"><style>
+        <link href="/website/styles/sitestyle.css" rel="stylesheet" type="text/css" media="all"><style>
         </style></head>
     <body><div class="page"><div class="main">
         <h1>miscellaneously interesting</h1>
-        ← <a class="back" href="/website/newsite/websites">back</a>
+        ← <a class="back" href="/website/websites">back</a>
         <h2>→ <a href="https://www.montereybayaquarium.org/animals/live-cams/sea-otter-cam">Sea Otter Live Cam</a></h2>
         <p>A live feed of the lovely sea otters at Monterey Bay Aquarium.</p>
 
