--- a/websites/math.html
+++ b/websites/math.html
@@ -3,11 +3,11 @@
     <head>
         <meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1">
         <title>websites: math</title>
-        <link href="/website/newsite/styles/sitestyle.css" rel="stylesheet" type="text/css" media="all"><style>
+        <link href="/website/styles/sitestyle.css" rel="stylesheet" type="text/css" media="all"><style>
         </style></head>
     <body><div class="page"><div class="main">
         <h1>math and physics</h1>
-        ← <a class="back" href="/website/newsite/websites">back</a>
+        ← <a class="back" href="/website/websites">back</a>
         <h2>→ <a href="https://codepen.io/akm2/full/rHIsa">Gravity Points</a></h2>
         <p>A cool interactive simulation of orbiting points by Akimitsu Hamamuro.</p>
 
