--- a/words/blips.html
+++ b/words/blips.html
@@ -23,8 +23,8 @@
     <body>
         <div class="blips"><h1><a href="/website/words">b</a><a href="/website/words">l</a><a href="/website/words">i</a><a href="/website/words">p</a><a href="/website/words">s</a></h1></div>
         <p>short bursts of words;<br>whenever they want to appear.<br><br>
-            <a href="/website/words/blips/split">split</a><br>
-            <a href="/website/words/blips/small">small</a><br>
-            <a href="/website/words/blips/liftoff">liftoff</a>
+            <a href="blips/split">split</a><br>
+            <a href="blips/small">small</a><br>
+            <a href="blips/liftoff">liftoff</a>
         </p>
     </body>
