--- a/words/concreto.html
+++ b/words/concreto.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1">
         <title>words</title>
-        <link href="/website/newsite/styles/text-style.css" rel="stylesheet" type="text/css" media="all">
+        <link href="/website/styles/text-style.css" rel="stylesheet" type="text/css" media="all">
         <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+Mono:wght@600&display=swap" rel="stylesheet">
         <style>
         @import url('https://fonts.googleapis.com/css2?family=Atkinson+Hyperlegible:ital,wght@0,400;0,700;1,400&display=swap');
@@ -12,7 +12,7 @@
 
     <body><div class="page"><div class="main">
         <h1>concreto</h1>
-        ← <a class="back" href="/website/newsite/words">back</a>
+        ← <a class="back" href="/website/words">back</a>
         <pre style="padding: 10px; font-size: min(1.25rem, 4vw); font-family: 'Noto Sans Mono', monospace; line-height: 1">
 
 me   memo   memória   ria<br>
