--- a/words/ona.html
+++ b/words/ona.html
@@ -3,14 +3,14 @@
     <head>
         <meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1">
         <title>words: ona</title>
-        <link href="/website/newsite/styles/text-style.css" rel="stylesheet" type="text/css" media="all">
+        <link href="/website/styles/text-style.css" rel="stylesheet" type="text/css" media="all">
         <style>
         @import url('https://fonts.googleapis.com/css2?family=Atkinson+Hyperlegible:ital,wght@0,400;0,700;1,400&display=swap');
         </style></head>
 
     <body><div class="page"><div class="main">
         <h1>ona</h1>
-        ← <a class="back" href="/website/newsite/words">back</a>
+        ← <a class="back" href="/website/words">back</a>
         <p>
         ona li powe.
         <br>mi pali e ona.
