--- a/words/diary.html
+++ b/words/diary.html
@@ -137,5 +137,5 @@
             <br>
             <br><span style="font-family: 'Libre Baskerville', serif">(Author looks at work with a strange face)</span>
             <br>
-            <br><a href="/website/newsite/words">back to words</a></p>
+            <br><a href="/website/words">back to words</a></p>
 </body>
