--- a/words/sona-pini.html
+++ b/words/sona-pini.html
@@ -5,14 +5,14 @@
         <head>
             <meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1">
             <title>words: sona pini</title>
-            <link href="/website/newsite/styles/text-style.css" rel="stylesheet" type="text/css" media="all">
+            <link href="/website/styles/text-style.css" rel="stylesheet" type="text/css" media="all">
             <style>
             @import url('https://fonts.googleapis.com/css2?family=Atkinson+Hyperlegible:ital,wght@0,400;0,700;1,400&display=swap');
             </style></head>
     
         <body><div class="page"><div class="main">
             <h1>sona pini</h1>
-            ← <a class="back" href="/website/newsite/words">back</a>
+            ← <a class="back" href="/website/words">back</a>
             <p>
         tenpo kama la mi sona ala sona e ni?
         <br>lon weka mi?
