--- a/words/vento.html
+++ b/words/vento.html
@@ -4,14 +4,14 @@
     <head>
         <meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1">
         <title>words: vento</title>
-        <link href="/website/newsite/styles/text-style.css" rel="stylesheet" type="text/css" media="all">
+        <link href="/website/styles/text-style.css" rel="stylesheet" type="text/css" media="all">
         <style>
         @import url('https://fonts.googleapis.com/css2?family=Atkinson+Hyperlegible:ital,wght@0,400;0,700;1,400&display=swap');
         </style></head>
 
     <body><div class="page"><div class="main">
         <h1>vento</h1>
-        ← <a class="back" href="/website/newsite/words">back</a>
+        ← <a class="back" href="/website/words">back</a>
         <p>
             Numa manhã fria.
             <br>Saio dos meus aposentos em rumo ao meu colégio.
