--- a/misc/folder.html
+++ b/misc/folder.html
@@ -20,8 +20,9 @@
     <details>
         <summary><a>index(es)</a></summary>
         <ul>
-            <li><a href="folder/index">index</a>: an earlier version of the start page with a sidebar and descriptions for pages.</li>
-            <li><a href="/website/index">index2</a>: refer to <a href="journal#home">journal entry.</a></li>
+            <li><a href="folder/index">index</a>: the earliest version, with rounded corners.</li>
+            <li><a href="folder/index2">index2</a>: a version with a sidebar and descriptions for pages.</li>
+            <li><a href="folder/index3">index3</a>: a simpler version without a sidebar.</li>
         </ul>
         <details>
             <summary><a>earlier version of intro text</a>: I wanted to change this to be more about the site (or as best as i could), 
