--- a/misc/folder/index.html
+++ b/misc/folder/index.html
@@ -3,67 +3,46 @@
     <head>
         <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300&display=swap" rel="stylesheet"> 
         <link href="https://fonts.googleapis.com/css2?family=Inter:wght@800&display=swap" rel="stylesheet"> 
-        <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@700&display=swap" rel="stylesheet">
-        <link href="https://fonts.googleapis.com/css2?family=Libre+Baskerville:ital,wght@1,400&display=swap" rel="stylesheet">
-        <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:ital,wght@1,700&display=swap" rel="stylesheet"> 
-        <link href="https://fonts.googleapis.com/css2?family=Atkinson+Hyperlegible:wght@700&display=swap" rel="stylesheet"> 
         <meta charset="UTF-8">
-        <title>cvni81</title>
-        <link href="style.css" rel="stylesheet" type="text/css" media="all"><style>
-            @font-face{font-family: 'Vera Humana 95';
-            font-weight: normal;
-            src: url("styles/Vera.ttf")}
+        <title>≠</title>
+        <link href="/mute-ante/style.css" rel="stylesheet" type="text/css" media="all">
+    <style>
+        .this-container{
+            display: grid;
+            position: absolute;
+            left: 50%;
+            bottom: 50%;
+            transform: translate(-50%, 50%);
+            grid-template-columns: auto 1px 60%;
+            gap: 30px;
+            width: 700px;
+            padding: 20px;
+            padding-top: 30px; padding-bottom: 30px;
+            border: solid #F0F0F0 2px;
+            border-radius: 30px;
+            line-height: 1.5;
+            }
+    </style></head>
 
-            @font-face{font-family: 'Vera Humana 95';
-            font-weight: bold;
-            src: url("styles/Verab.ttf")}
-            .all{display: grid;
-            grid-template-columns: 350px 1px auto}
-            body{min-height:100vh;
-            margin:0px;}
-            .misc{color: #f0f0f0;
-            font-family: 'Space Grotesk', sans-serif;}
-            .websites{color: #f0f0f0;
-            font-family: 'Vera Humana 95', sans-serif;}
-            .words{color: #f0f0f0;
-            font-family: 'Atkinson Hyperlegible', sans-serif}
-            a.misc, a.i, a.log, a.buttons{font-style: italic;}
-            a.buttons:hover{color: #7ba0cc; text-decoration-color:#7ba0cc}
-            a.misc:hover{color: #15c405;
-            text-decoration-color: #15c405;}
-            a.log:hover{color: #ffa900;
-            text-decoration-color: #ffa900;}
-            a.websites:hover{color: #F2CF68;
-            text-decoration-color: #F2CF68;}
-            .i, .buttons{font-family: 'Libre Baskerville', serif}
-            .log{font-family: 'IBM Plex Mono', sans-serif}
-            .small{font-size: large}
-        </style></head>
-
-    <body>
-    <div class="all">
-    <div style="padding: 0px 20px; background-color: #202020; min-height:100vh">
-    <h1 style="text-shadow:#080808 5px 5px; line-height: 1.25">cvni81's website</h1>
-    <p>Hi! Welcome to my corner of the web where i put stuff i like, stuff i do and other things too!<br>
-    Making this website has been really fun, and i hope you like having a gander at it.<br>
-    This thing has been pretty much always in construction since i've started it, so things may appear and disappear from time to time. It's normal around here i guess.<br>Make yourself at home!<br>
-    Also: they/them, pt-br, en, tok, <18yo</p>
-    <p><b>discord</b>: @cvni81#4837<br><b>email</b>: cvni81@gmail.com</p>
-    </div>
-    <div style="border:solid #f0f0f0 2px"></div>
-    <div style="font-size:x-large; padding-left: 50px; margin: auto 0;">
-        <a href="/website/about">about</a> .......... <span class="small">stuff about me</span><br>
-        <a href="/website/musicians">musicians</a> .......... <span class="small">good music people</span><br>
-        <a href="/website/websites" class="websites">websites</a> .......... <span class="small">cool websites i've collected</span><br>
-        <br>
-        <a href="/website/words" class="words">words</a> .......... <span class="small">poems and other things</span><br>
-        <a href="/website/blender">blender</a> .......... <span class="small">stuff i've made in blender</span><br>
-        <a href="/website/doodles" class="i">doodles</a> .......... <span class="small">stuff i draw</span><br>
-        <a href="/website/misc" class="misc">misc</a> .......... <span class="small">other things</span><br>
-        <br>
-        <a href="/website/buttons" class="buttons">buttons</a> .......... <span class="small">links to other websites</span><br>
-        <a href="/website/404.html"><s>guestbook</s></a> .......... <span class="small">say hi!</span><br>
-        <a href="/website/sitelog" class="log">sitelog</a> .......... <span class="small">changes to the site</span>
-    </div>
-    </div>
-    </body>
+    <body><div class="this-container">
+        <div style="text-align: right;"> <h1><b>cvni81<br>mute ante</b></h1>
+        <div style="text-align: right;padding-bottom: 10px;"> <h1><b>cvni81<br>mute ante</b></h1>
+        <p>seize the day<br>pr-br, en, tok<br><18yo, they/them</p><br>
+        <a href="http://discordapp.com/users/691348576093077535" class="discord"><b>discord</b> ↲</a><br>
+        <a href="mailto:cvni1981@gmail.com"><b>email</b> ↲</a><br>
+        <a href="https://bandcamp.com/cvni1981" class="bandcamp"><b>bandcamp (fan)</b> ↲</a><br>
+        <a href="https://www.youtube.com/channel/UCSlbHKWNyJbId31FHbqB4uw" class="youtube"><b>youtube</b> ↲</a><br>
+        </div>
+        <div style="border-left: solid 2px #F0F0F0"></div>
+        <div style="text-align: left">
+        <div style="text-align: left; display: flex; align-items: center;">
+        <ul style="font-size: large;">
+            <li><a href="/mute-ante/interests"><b>interests</b></a> things i'm interested in<br></li>
+            <li><a href="/mute-ante/musicians"><b>musicians</b></a> good music people<br></li>
+            <li><a href="/mute-ante/websites"><b>websites</b></a> cool websites i've collected<br></li>
+            <li><a href="/mute-ante/blender"><b>blender</b></a> things i've made in blender<br></li>
+            <li><a href="/mute-ante/nimi-mute"><b>nimi mute</b></a> texts in toki pona<br></li>
+            <li><a href="/mute-ante/playlists"><b>playlists</b></a> playlists i've made<br></li>
+            <li><a href="/mute-ante/difference"><b>difference</b></a> why it matters<br></li>
+            <li><a href="/mute-ante/sitelog"><b>sitelog</b></a><br></li></ul></div>
+    </div></body>
