--- a/sitelog.html
+++ b/sitelog.html
@@ -26,6 +26,9 @@
 
     <p><b>More about the site: </b> I make this site with Firefox in Ubuntu, with a crappy 1366x768 display<br>did my best to make it look decent on mobile, if there's something wrong, please tell me! (<a href="http://discordapp.com/users/691348576093077535" class="discord">discord</a>)<br>in existence since july 2022<br>and that's it! enjoy the sitelog ig</p>
     <div id="entry">
+        <h2>6/2/2023 14:45</h2>
+        <p>The redesign is finally done!!!</p> 
+    </div><div id="entry">
         <h2>4/2/2023 14:21</h2>
         <p>I'm redesigning the site, this time with mobile <b>in mind</b> (wow!) and in <b>light mode</b>! It's gonna be ready sometime in the future!</p> 
     </div><div id="entry">
