--- a/misc/folder/index2.html
+++ b/misc/folder/index2.html
@@ -12,11 +12,11 @@
         <link href="style.css" rel="stylesheet" type="text/css" media="all"><style>
             @font-face{font-family: 'Vera Humana 95';
             font-weight: normal;
-            src: url("styles/Vera.ttf")}
+            src: url("/website/styles/Vera.ttf")}
 
             @font-face{font-family: 'Vera Humana 95';
             font-weight: bold;
-            src: url("styles/Verab.ttf")}
+            src: url("/website/styles/Verab.ttf")}
             .all{display: grid;
             grid-template-columns: 350px 1px auto}
             body{min-height:100vh;
