--- a/misc/folder/index.html
+++ b/misc/folder/index.html
@@ -5,7 +5,7 @@
         <link href="https://fonts.googleapis.com/css2?family=Inter:wght@800&display=swap" rel="stylesheet"> 
         <meta charset="UTF-8">
         <title>≠</title>
-        <link href="/mute-ante/style.css" rel="stylesheet" type="text/css" media="all">
+        <link href="style.css" rel="stylesheet" type="text/css" media="all">
     <style>
         .this-container{
             display: grid;
@@ -20,8 +20,7 @@
             padding-top: 30px; padding-bottom: 30px;
             border: solid #F0F0F0 2px;
             border-radius: 30px;
-            line-height: 1.5;
-            }
+            line-height: 1.5;}
     </style></head>
 
     <body><div class="this-container">
