--- a/misc/folder/index.html
+++ b/misc/folder/index.html
@@ -35,12 +35,12 @@
         <div style="text-align: left">
         <div style="text-align: left; display: flex; align-items: center;">
         <ul style="font-size: large;">
-            <li><a href="/mute-ante/interests"><b>interests</b></a> things i'm interested in<br></li>
-            <li><a href="/mute-ante/musicians"><b>musicians</b></a> good music people<br></li>
-            <li><a href="/mute-ante/websites"><b>websites</b></a> cool websites i've collected<br></li>
-            <li><a href="/mute-ante/blender"><b>blender</b></a> things i've made in blender<br></li>
-            <li><a href="/mute-ante/nimi-mute"><b>nimi mute</b></a> texts in toki pona<br></li>
-            <li><a href="/mute-ante/playlists"><b>playlists</b></a> playlists i've made<br></li>
-            <li><a href="/mute-ante/difference"><b>difference</b></a> why it matters<br></li>
-            <li><a href="/mute-ante/sitelog"><b>sitelog</b></a><br></li></ul></div>
+            <li><a href="/website/interests"><b>interests</b></a> things i'm interested in<br></li>
+            <li><a href="/website/musicians"><b>musicians</b></a> good music people<br></li>
+            <li><a href="/website/websites"><b>websites</b></a> cool websites i've collected<br></li>
+            <li><a href="/website/blender"><b>blender</b></a> things i've made in blender<br></li>
+            <li><a href="/website/nimi-mute"><b>nimi mute</b></a> texts in toki pona<br></li>
+            <li><a href="/website/playlists"><b>playlists</b></a> playlists i've made<br></li>
+            <li><a href="/website/difference"><b>difference</b></a> why it matters<br></li>
+            <li><a href="/website/sitelog"><b>sitelog</b></a><br></li></ul></div>
     </div></body>
