--- a/misc/folder/index3.html
+++ b/misc/folder/index3.html
@@ -5,7 +5,7 @@
         <link href="https://fonts.googleapis.com/css2?family=Inter:wght@800&display=swap" rel="stylesheet"> 
         <meta charset="UTF-8">
         <title>nowhere in particular</title>
-        <link href="/website/styles/newstyle.css" rel="stylesheet" type="text/css" media="all"><style>
+        <link href="newstyle.css" rel="stylesheet" type="text/css" media="all"><style>
             a.buttons:hover{color: #7ba0cc; text-decoration-color:#7ba0cc}
             a.misc:hover{color: #15c405;
             text-decoration-color: #15c405;}
