--- a/misc/folder.html
+++ b/misc/folder.html
@@ -23,6 +23,7 @@
             <li><a href="folder/index">index</a>: the earliest version, with rounded corners.</li>
             <li><a href="folder/index2">index2</a>: a version with a sidebar and descriptions for pages.</li>
             <li><a href="folder/index3">index3</a>: a simpler version without a sidebar.</li>
+            <li><a href="folder/building.png">building</a>: the first image i meant to put on the current welcome page.</li>
         </ul>
         <details>
             <summary><a>earlier version of intro text</a>: I wanted to change this to be more about the site (or as best as i could), 
@@ -72,6 +73,7 @@
     <details>
         <summary><a>miscellaneous images</a></summary>
         <ul>
+            <li><a href="folder/oldnowhere.png">oldnowhere</a>: the old button that fit with the old dark style of the site.</li>
             <li><a href="folder/monsuta.png">monsuta</a>: i originally put this in the blender page upstairs, but the contrast sucked so i took it out. now it's here.</li>
             <li><a href="folder/square.png">square</a>: another thing from the blenders, this time removed because it messed up the spacing.</li>
             <li><a href="folder/redlonely.png">redlonely</a>: a version of a doodle that i wanted to use for status.cafe, but i don't think it looks very good.</li>
