--- a/404.html
+++ b/404.html
@@ -20,7 +20,7 @@
     </style></head>
 
     <body><div class="this-container">
-        <img src="misc/folder/walking.gif" alt="walking"><br>
+        <img src="/website/misc/folder/walking.gif" alt="walking"><br>
         <span style="text-align: center;">this page doesn't exist<br>how did you get here<br><a href="home">back to homepage</a></span>
     </div>
     </body>
