--- a/misc/folder.html
+++ b/misc/folder.html
@@ -73,7 +73,7 @@
     <details>
         <summary><a>miscellaneous images</a></summary>
         <ul>
-            <li><a href="folder/oldnowhere.png">oldnowhere</a>: the old button that fit with the old dark style of the site.</li>
+            <li><a href="folder/oldnowhere.gif">oldnowhere</a>: the old button that fit with the old dark style of the site.</li>
             <li><a href="folder/monsuta.png">monsuta</a>: i originally put this in the blender page upstairs, but the contrast sucked so i took it out. now it's here.</li>
             <li><a href="folder/square.png">square</a>: another thing from the blenders, this time removed because it messed up the spacing.</li>
             <li><a href="folder/redlonely.png">redlonely</a>: a version of a doodle that i wanted to use for status.cafe, but i don't think it looks very good.</li>
