--- a/404.html
+++ b/404.html
@@ -21,6 +21,6 @@
 
     <body><div class="this-container">
         <img src="/website/misc/folder/walking.gif" alt="walking"><br>
-        <span style="text-align: center;">this page doesn't exist<br>how did you get here<br><a href="home">back to homepage</a></span>
+        <span style="text-align: center;">this page doesn't exist<br>how did you get here<br><a href="/website/home">back to homepage</a></span>
     </div>
     </body>
