--- a/sitelog.html
+++ b/sitelog.html
@@ -24,7 +24,7 @@
     <h1><i>sitelog</i></h1>
     ← <a class="back" href="home">home</a>
 
-    <p><b>More about the site: </b> I make this site with Firefox in Ubuntu, with a crappy 1366x768 display<br>did my best to make it look decent on mobile, if there's something wrong, please tell me! (<a href="http://discordapp.com/users/691348576093077535" class="discord">discord</a>)<br>in existence since july 2022<br>and that's it! enjoy the sitelog ig</p>
+    <p style="margin-bottom: 40px"><b>More about the site: </b> I make this site with Firefox in Ubuntu, with a crappy 1366x768 display<br>did my best to make it look decent on mobile, if there's something wrong, please tell me! (<a href="http://discordapp.com/users/691348576093077535" class="discord">discord</a>)<br>in existence since july 2022<br>and that's it! enjoy the sitelog ig</p>
     <div id="entry">
         <h2>6/2/2023 14:45</h2>
         <p>The redesign is finally done!!!</p> 
