--- a/sitelog.html
+++ b/sitelog.html
@@ -24,11 +24,11 @@
     <h1><i>sitelog</i></h1>
     ← <a class="back" href="home">home</a>
 
-    <details style="margin-bottom: 40px"><summary><a>More about the site</a></summary> 
+    <details style="margin-bottom: 40px"><summary><a>More about the site</a></summary><p> 
         make this site with Firefox in Ubuntu, with a crappy 1366x768 display<br>did my best to make it look decent on mobile, if there's something wrong, please tell me! (<a href="http://discordapp.com/users/691348576093077535" class="discord">discord</a>)<br>
         in existence since july 2022<br>
         the general theme/objective for this is to try to do as much as possible with as little as possible, while still being kinda interesting. Idk if i succeeded h
-        <br>and that's it! enjoy the sitelog ig</details>
+        <br>and that's it! enjoy the sitelog ig</p></details>
     <div id="entry">
         <h2>6/2/2023 14:45</h2>
         <p>The redesign is finally done!!!</p> 
