added .top class

--- a/websites/math.html
+++ b/websites/math.html
@@ -6,8 +6,8 @@
         <link href="/website/styles/sitestyle.css" rel="stylesheet" type="text/css" media="all"><style>
         </style></head>
     <body><div class="page"><div class="main">
-        <h1>math and physics</h1>
-        ← <a class="back" href="/website/websites">back</a>
+        <div class="top"><h1>math and physics</h1>
+        ← <a class="back" href="/website/websites">back</a></div>
         <h2>→ <a href="https://codepen.io/akm2/full/rHIsa">Gravity Points</a></h2>
         <p>A cool interactive simulation of orbiting points by Akimitsu Hamamuro.</p>
 
