--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             img{width: 50%}
             p{margin: auto}
 
-            a{font-size: max(2vw, 2vh); color: #f0f0f0}
+            a{font-size: max(2vw, 2vh); color: #f0f0f0; transition: all .2s cubic-bezier(.08,.82,.17,1)}
             a:hover{background-color: #f0f0f0; color: #404040; text-decoration-color: #f0f0f0}
             @media only screen and (max-aspect-ratio: 1/1){
             body{display: inline}
