fixed the hover thing

--- a/misc.html
+++ b/misc.html
@@ -6,10 +6,10 @@
         <title>> misc</title>
         <link href="styles/miscstyle.css" rel="stylesheet" type="text/css" media="all"><style>
 
-            .journal:hover ~ img{background: url('misc/folder/journal.png');}
-            .notes:hover ~ img{background: url('misc/folder/notes.png');}
-            .folder:hover ~ img{background: url('misc/folder/folder.png');}
-            .exit:hover ~ img{background: url('misc/folder/exit.png');}
+            .journal:hover ~ img{background: url(misc/folder/journal.png);}
+            .notes:hover ~ img{background: url(misc/folder/notes.png);}
+            .folder:hover ~ img{background: url(misc/folder/folder.png);}
+            .exit:hover ~ img{background: url(misc/folder/exit.png);}
 
         </style></head>
 
@@ -26,5 +26,5 @@
                 <li><a class="folder" href="misc/folder">open the folder</a></li>
                 <li><a class="exit" href="home">walk back out the door</a></li>
             </ul><br>
-        <img src="misc/folder/dotdotdot.png" style="margin: 0 auto">
+        <img src="misc/folder/dotdotdot.png" style="margin: 0 auto; display: block">
     </div></div></body></html>
