ok hopefully now it works h

--- a/misc.html
+++ b/misc.html
@@ -6,10 +6,10 @@
         <title>> misc</title>
         <link href="styles/miscstyle.css" rel="stylesheet" type="text/css" media="all"><style>
 
-            a.journal:hover ~ img{background: url(misc/folder/journal.png);}
-            a.notes:hover ~ img{background: url(misc/folder/notes.png);}
-            a.folder:hover ~ img{background: url(misc/folder/folder.png);}
-            a.exit:hover ~ img{background: url(misc/folder/exit.png);}
+            a.journal:hover ~ img{background: url(misc/folder/journal.png) no-repeat;}
+            a.notes:hover ~ img{background: url(misc/folder/notes.png) no-repeat;}
+            a.folder:hover ~ img{background: url(misc/folder/folder.png) no-repeat;}
+            a.exit:hover ~ img{background: url(misc/folder/exit.png) no-repeat;}
 
         </style></head>
 
