--- a/misc.html
+++ b/misc.html
@@ -6,10 +6,10 @@
         <title>> misc</title>
         <link href="styles/miscstyle.css" rel="stylesheet" type="text/css" media="all"><style>
 
-            a.journal:hover ~ img.indicator{background: url(misc/folder/journal.png) no-repeat;}
-            a.notes:hover ~ img.indicator{background: url(misc/folder/notes.png) no-repeat;}
-            a.folder:hover ~ img.indicator{background: url(misc/folder/folder.png) no-repeat;}
-            a.exit:hover ~ img.indicator{background: url(misc/folder/exit.png) no-repeat;}
+            div.journal:hover ~ img.indicator{background: url(misc/folder/journal.png) no-repeat;}
+            div.notes:hover ~ img.indicator{background: url(misc/folder/notes.png) no-repeat;}
+            div.folder:hover ~ img.indicator{background: url(misc/folder/folder.png) no-repeat;}
+            div.exit:hover ~ img.indicator{background: url(misc/folder/exit.png) no-repeat;}
 
         </style></head>
 
@@ -21,10 +21,10 @@
             <br>You see a drawing table. On it is a notebook and a folder. Besides the table is a heavily scratched wall covered in sticky notes.
         </p>
             <ul>
-                <li><a class="journal" href="misc/journal">open the notebook</a></li>
-                <li><a class="notes" href="misc/phrases">look at the sticky notes</a></li>
-                <li><a class="folder" href="misc/folder">open the folder</a></li>
-                <li><a class="exit" href="home">walk back out the door</a></li>
+                <li><div class="journal"><a href="misc/journal">open the notebook</a></div></li>
+                <li><div class="phrases"><a href="misc/phrases">look at the sticky notes</a></div></li>
+                <li><div class="folder"><a href="misc/folder">open the folder</a></div></li>
+                <li><div class="exit"><a href="home">walk back out the door</a></div></li>
             </ul><br>
         <img class="indicator" src="misc/folder/dotdotdot.png" style="margin: 0 auto; display: block">
     </div></div></body></html>
