--- a/misc.html
+++ b/misc.html
@@ -6,10 +6,10 @@
         <title>> misc</title>
         <link href="styles/miscstyle.css" rel="stylesheet" type="text/css" media="all"><style>
 
-            div.journal:hover ~ img.indicator{background: url(misc/folder/journal.png) no-repeat;}
-            div.notes:hover ~ img.indicator{background: url(misc/folder/notes.png) no-repeat;}
-            div.folder:hover ~ img.indicator{background: url(misc/folder/folder.png) no-repeat;}
-            div.exit:hover ~ img.indicator{background: url(misc/folder/exit.png) no-repeat;}
+            div.journal:hover ~ img.indicator{content: url("misc/folder/journal.png");}
+            div.notes:hover ~ img.indicator{content: url("misc/folder/notes.png");}
+            div.folder:hover ~ img.indicator{content: url("misc/folder/folder.png");}
+            div.exit:hover ~ img.indicator{content: url("misc/folder/exit.png");}
 
         </style></head>
 
