--- a/misc.html
+++ b/misc.html
@@ -6,10 +6,10 @@
         <title>> misc</title>
         <link href="styles/miscstyle.css" rel="stylesheet" type="text/css" media="all"><style>
 
-            div.journal:hover ~ img.indicator{content: url("misc/folder/journal.png");}
-            div.notes:hover ~ img.indicator{content: url("misc/folder/notes.png");}
-            div.folder:hover ~ img.indicator{content: url("misc/folder/folder.png");}
-            div.exit:hover ~ img.indicator{content: url("misc/folder/exit.png");}
+            div.journal:hover ~ div.indicator{content: url("misc/folder/journal.png");}
+            div.notes:hover ~ div.indicator{content: url("misc/folder/notes.png");}
+            div.folder:hover ~ div.indicator{content: url("misc/folder/folder.png");}
+            div.exit:hover ~ div.indicator{content: url("misc/folder/exit.png");}
 
         </style></head>
 
@@ -26,5 +26,5 @@
                 <li><div class="folder"><a href="misc/folder">open the folder</a></div></li>
                 <li><div class="exit"><a href="home">walk back out the door</a></div></li>
             </ul><br>
-        <img class="indicator" src="misc/folder/dotdotdot.png" style="margin: 0 auto; display: block">
+        <div class="indicator"><img src="misc/folder/dotdotdot.png" style="margin: 0 auto; display: block"></div>
     </div></div></body></html>
