--- a/misc.html
+++ b/misc.html
@@ -20,11 +20,9 @@
             <br>You step into a dark room, it's completely empty and somehow lit by a monochromatic green light. It's slightly nauseating.
             <br>You see a drawing table. On it is a notebook and a folder. Besides the table is a heavily scratched wall covered in sticky notes.
         </p>
-            <ul>
-                <li><div class="journal"><a href="misc/journal">open the notebook</a></div></li>
-                <li><div class="phrases"><a href="misc/phrases">look at the sticky notes</a></div></li>
-                <li><div class="folder"><a href="misc/folder">open the folder</a></div></li>
-                <li><div class="exit"><a href="home">walk back out the door</a></div></li>
-            </ul><br>
-        <div class="indicator" style="content: url(misc/folder/dotdotdot.png); margin: 0 auto; display: block"></div>
+            > <div class="journal"><a href="misc/journal">open the notebook</a></div>
+            > <div class="phrases"><a href="misc/phrases">look at the sticky notes</a></div>
+            > <div class="folder"><a href="misc/folder">open the folder</a></div>
+            > <div class="exit"><a href="home">walk back out the door</a></div><br>
+            <div class="indicator" style="content: url(misc/folder/dotdotdot.png); margin: 0 auto; display: block"></div>
     </div></div></body></html>
