--- a/misc.html
+++ b/misc.html
@@ -6,6 +6,7 @@
         <title>> misc</title>
         <link href="styles/miscstyle.css" rel="stylesheet" type="text/css" media="all"><style>
 
+            div.indicator{content: url(misc/folder/dotdotdot.png); margin: 0 auto; display: block}
             div.journal:hover ~ div.indicator{content: url(misc/folder/journal.png);}
             div.notes:hover ~ div.indicator{content: url(misc/folder/notes.png);}
             div.folder:hover ~ div.indicator{content: url(misc/folder/folder.png);}
@@ -24,5 +25,5 @@
             <div class="phrases">> <a href="misc/phrases">look at the sticky notes</a></div>
             <div class="folder">> <a href="misc/folder">open the folder</a></div>
             <div class="exit">> <a href="home">walk back out the door</a></div><br>
-            <div class="indicator" style="content: url(misc/folder/dotdotdot.png); margin: 0 auto; display: block"></div>
+            <div class="indicator"></div>
     </div></div></body></html>
