i think it works now

--- a/misc.html
+++ b/misc.html
@@ -22,7 +22,7 @@
             <br>You see a drawing table. On it is a notebook and a folder. Besides the table is a heavily scratched wall covered in sticky notes.
         </p>
             <div class="journal">> <a href="misc/journal">open the notebook</a></div>
-            <div class="phrases">> <a href="misc/phrases">look at the sticky notes</a></div>
+            <div class="notes">> <a href="misc/phrases">look at the sticky notes</a></div>
             <div class="folder">> <a href="misc/folder">open the folder</a></div>
             <div class="exit">> <a href="home">walk back out the door</a></div><br>
             <div class="indicator"></div>
