--- a/misc.html
+++ b/misc.html
@@ -6,6 +6,7 @@
         <title>> misc</title>
         <link href="styles/miscstyle.css" rel="stylesheet" type="text/css" media="all"><style>
 
+            .journal, .notes, .folder, .exit{padding-left: 20px; padding-top: 1rem}
             div.indicator{content: url(misc/folder/dotdotdot.png); margin: 0 auto; display: block}
             div.journal:hover ~ div.indicator{content: url(misc/folder/journal.png);}
             div.notes:hover ~ div.indicator{content: url(misc/folder/notes.png);}
