--- a/misc.html
+++ b/misc.html
@@ -6,7 +6,7 @@
         <title>> misc</title>
         <link href="styles/miscstyle.css" rel="stylesheet" type="text/css" media="all"><style>
 
-            .journal, .notes, .folder, .exit{padding-left: 20px; padding-top: 1rem}
+            .journal, .notes, .folder, .exit{padding-left: 20px}
             div.indicator{content: url(misc/folder/dotdotdot.png); margin: 0 auto; display: block}
             div.journal:hover ~ div.indicator{content: url(misc/folder/journal.png);}
             div.notes:hover ~ div.indicator{content: url(misc/folder/notes.png);}
@@ -22,7 +22,7 @@
             <br>You step into a dark room, it's completely empty and somehow lit by a monochromatic green light. It's slightly nauseating.
             <br>You see a drawing table. On it is a notebook and a folder. Besides the table is a heavily scratched wall covered in sticky notes.
         </p>
-            <div class="journal">> <a href="misc/journal">open the notebook</a></div>
+            <div class="journal" style="padding-top: 1rem">> <a href="misc/journal">open the notebook</a></div>
             <div class="notes">> <a href="misc/phrases">look at the sticky notes</a></div>
             <div class="folder">> <a href="misc/folder">open the folder</a></div>
             <div class="exit">> <a href="home">walk back out the door</a></div><br>
