--- a/misc/journal.html
+++ b/misc/journal.html
@@ -7,10 +7,10 @@
         <link href="/website/styles/miscstyle.css" rel="stylesheet" type="text/css" media="all"><style>
         .entry{background-color: #072502;
         border-left: solid #15c405 5px;
-        padding: 10px 20px;
+        padding: 20px;
         margin: 40px auto;
         max-width: 100%}
-        h2{margin:16px 0}
+        h2{margin:0 0 16px 0}
         </style></head>
 
     <body><div class="page"><div class="main">
