--- a/doodles/people.html
+++ b/doodles/people.html
@@ -34,6 +34,7 @@
         <div class="page"><div class="main">
         <img src="peopleheader.gif" alt="people" style="width: 60%" class="header"><br>< <a class="back" href="/website/doodles">home</a>
         <div id="drawings">
+        <img src="people/equal.jpg" alt="equal">
         <img src="people/guy2.jpg" alt="guy2">
         <img src="people/pointing.jpg" alt="pointing">
         <img src="people/fingergun.jpg" alt="fingergun">
