--- a/buttons.html
+++ b/buttons.html
@@ -33,7 +33,7 @@
     <a href="https://jansamosi.ichi.city/"  class="button"><img src="https://jansamosi.ichi.city/badg.png" alt="samosi badg"></a> 
     <a href="https://temmiemew.neocities.org/" class="button"><img src="https://temmiemew.neocities.org/temmie-mew-button.png" alt="behold! the mu-niverse!"></a>
     <a class="button" href="https://jmibo.neocities.org/"><img src="https://jmibo.neocities.org/assets/button.png"></a> 
-    <a href="https://kpwu.neocities.org/" class="button"><img id="button_self" src="https://kpwu.neocities.org/images/kpwu_button.png" alt="kpwu button"></a>
+    <a href="https://kpwu.xyz/" class="button"><img id="button_self" src="https://kpwu.xyz/images/kpwu_button.png" alt="kpwu button"></a>
     <h2>other neat places</h2>
     <a href="https://worldendling.neocities.org/" class="button"><img width="88" height="31" src="misc/folder/worldendling.gif"></a>
     <a href="https://moondvsted.neocities.org/" class="button"><img src="https://f2.toyhou.se/file/f2-toyhou-se/images/47052159_rd5iWTFAMmQWrMr.gif"></a>
