--- a/misc/folder.html
+++ b/misc/folder.html
@@ -11,6 +11,7 @@
         margin: 10px 0px}
         ul{margin: 0px}
         details details{margin-left: 10px}
+        summary{font-size: 1.1rem}
         </style></head>
 
     <body><div class="page"><div class="main">
