--- a/misc/folder.html
+++ b/misc/folder.html
@@ -27,8 +27,8 @@
             <li><a href="folder/building.png">building</a>: the first image i meant to put on the current welcome page.</li>
         </ul>
         <details>
-            <summary><a>earlier version of intro text</a>: I wanted to change this to be more about the site (or as best as i could), 
-                and move the contact and other info to the "about me" page.</summary>
+            <summary><a>earlier version of intro text</a>: <span style="font-size: 1rem">I wanted to change this to be more about the site (or as best as i could), 
+                and move the contact and other info to the "about me" page.</span></summary>
                 <p>Hi! Welcome to my corner of the web where i put stuff i like, stuff i do and other things too!<br>
                 Making this website has been really fun, and i hope you like having a gander at it.<br>
                 This thing has been pretty much always in construction since i've started it, so things may appear and disappear from time to time. It's normal around here i guess.<br>Make yourself at home!<br>
