--- a/doodles/etc.html
+++ b/doodles/etc.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html style="height:100%">
     <head>
-        <link href="https://fonts.googleapis.com/css2?family=Libre+Baskerville:ital,wght@0,400;0,700;1,400&display=swap" rel="stylesheet"> 
+        <link href="https://fonts.googleapis.com/css2?family=Crimson+Text:ital,wght@0,400;1,700&display=swap" rel="stylesheet"> 
         <meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1">
         <title>etc</title>
         <link href="/website/styles/style.css" rel="stylesheet" type="text/css" media="all">
@@ -10,7 +10,7 @@
             background-repeat:no-repeat;
             background-size:cover;
             color: #101010;
-            font-family: 'Libre Baskerville', serif;
+            font-family: 'Crimson Text', serif;
             background-attachment: fixed;}
         .main{padding-top: 20px}
         h1{font-size: min(10vw, 3rem); font-style: italic;}
