--- a/doodles/people.html
+++ b/doodles/people.html
@@ -3,7 +3,7 @@
     <head>
         <link href="https://fonts.googleapis.com/css2?family=Libre+Baskerville:ital,wght@0,400;0,700;1,400&display=swap" rel="stylesheet"> 
         <meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1">
-        <title>people</title>
+        <title>{people}</title>
         <link href="/website/styles/style.css" rel="stylesheet" type="text/css" media="all">
     <style>
         body{background-image:url(background.jpg);
