--- a/words/nothing/starting.html
+++ b/words/nothing/starting.html
@@ -10,7 +10,7 @@
     <body>
     <h1>starting ramblings</h1>
     <p style="margin: 0; margin-top: 5px; color: #808080">24/2/2023</p>
-    ← <a href="/website/words" style="margin-top: 5px">back</a>
+    ← <a href="/website/words/nothing" style="margin-top: 5px">back</a>
     <p>
     hello there fellow internet enjoyer.
     <br>nice to have you here. very nice in fact.
