--- a/words/nothing.html
+++ b/words/nothing.html
@@ -13,7 +13,7 @@
     <body>
     <h1>nothing in particular.</h1>
     <p style="margin: 0; margin-top: 5px">a probable blog</p><br>
-    ← <a href="/website/words/nothing" style="margin-top: 5px">words</a>
+    ← <a href="/website/words" style="margin-top: 5px">words</a>
 
     <ul>
         <li><h2><a href="nothing/starting">starting ramblings</a></h2>   <p>24/2/2023</p></span></li>
