added blog thing officially

--- a/words.html
+++ b/words.html
@@ -16,16 +16,15 @@
         ← <a class="back" href="home">home</a>
         <br>
         <details><summary><a>about</a></summary>
-            <p style="max-width:750px; margin-top: 0px">mi pali e nimi mute ni lon tenpo pini.<br>
-                tenpo la ona li toki e ijo lon, tenpo ante la ona li musi li pilin.<br>
-                ale la, mi wile e ni: ona li pona tawa sina. o lukin pona.<br>
-                mi pali e nimi mute lon toki pona tan ni:<br>
-                ona li musi li pona tawa mi; ona li toki lon e pilin mi tawa mi.<br>
-                taso, mi pali e nimi mute ante lon toki ante kin.<br>
-                mi o pali e nimi mute sin a</p>
+            <p style="max-width:750px; margin-top: 0px">these are things i've written over time.<br>
+            most of them (the ones hidden away in the drawers) are in toki pona, a constructed language;
+            the rest is in portuguese.<br>
+            sorry if you don't understand either, i'm working on writing more english words.<br>
+            also i don't write very frequently.</p>
             </details>
 
-        <a href="words/diary.html" style="margin-top:0px">diary</a><br>
+        <a href="words/nothing" style="margin-top: 0px">blog (?)</a><br>
+        <a href="words/diary.html">diary</a><br>
         <a href="words/blips.html">blips</a> (non-mobile friendly)
 
         <details><summary><a>poems</a></summary>
