--- a/sitelog.html
+++ b/sitelog.html
@@ -30,6 +30,9 @@
         the general theme/objective for this is to try to do as much as possible with as little as possible, while still being kinda interesting. Idk if i succeeded h
         <br>and that's it! enjoy the sitelog ig</p></details>
     <div id="entry">
+        <h2>24/2/2023 18:43</h2>
+        <p>I've added <a href="words/nothing">a blog thing</a>! It only has one entry, but (hopefully) i'll write more for it in the future.</p> 
+    <div id="entry">
         <h2>6/2/2023 14:45</h2>
         <p>The redesign is finally done!!!</p> 
     </div><div id="entry">
