added back to top button to sitelog

--- a/sitelog.html
+++ b/sitelog.html
@@ -140,4 +140,5 @@
     </div><div id="entry">
         <h2>12/8/2022 17:42</h2>
         <p>I just added the <a href="blender">blender images</a> and now <a href="sitelog">this log</a> so i can keep better track of what i've added to the site. Also i feel like restructuring the site, the list format isn't working, i think.</p>
-    </div></div></div></body></html>
+    </div>
+    ↑ <a href="#">back to top</a></div></div></body></html>
