--- a/musicians.html
+++ b/musicians.html
@@ -73,4 +73,5 @@
                     Bill Wurtz</a> and 
                 <a href="https://open.spotify.com/artist/17wDxPR2GcU3r1dpCoCiUi" class="spotify">
                     João Donato</a>
-            </ul></div></div></body></html>
+            </ul>
+            ↑ <a href="#">back to top</a></div></div></body></html>
