--- a/blender.html
+++ b/blender.html
@@ -27,4 +27,5 @@
         <img src="blender/cuberootof2.png" alt="cuberootof2" width="100%">
         <img src="blender/idk2.png" alt="idk2" width="100%">
         <img src="blender/lines.png" alt="lines" width="100%">
+        ↑ <a href="#">back to top</a>
     </div></div></body></html>
