--- a/musicians.html
+++ b/musicians.html
@@ -74,4 +74,4 @@
                 <a href="https://open.spotify.com/artist/17wDxPR2GcU3r1dpCoCiUi" class="spotify">
                     João Donato</a>
             </ul>
-            <p>↑ <a href="#">back to top</a></p>div></div></body></html>
+            <p>↑ <a href="#">back to top</a></p></div></body></html>
