--- a/websites/math.html
+++ b/websites/math.html
@@ -52,4 +52,5 @@
 
         <h2>→ <a href="https://oeis.org/">The On-Line Encyclopedia of Integer Sequences</a></h2>
         <p>A database of over 300000 integer sequences and lots of info about them. Founded by N. Sloane in 1964.</p>
+        <p>↑ <a href="#">back to top</a></p>
     </div></body>
