--- a/websites/misc.html
+++ b/websites/misc.html
@@ -40,4 +40,5 @@
 
         <h2>→ <a href="https://closinglogosgroup.miraheze.org/wiki/Main_Page">CLG Wiki</a></h2>
         <p>A wiki dedicated to collecting closing production logos and TV ID's from around the world.</p>
+        <p>↑ <a href="#">back to top</a></p>
     </div></body>
