--- a/words/jan.html
+++ b/words/jan.html
@@ -68,4 +68,5 @@
         <br>toki la o pona.
         <br>o jan pona.
         </p>
+        <p>↑ <a href="#">back to top</a></p>
     </div></div></body></html>
