--- a/words/len-pi-laso-telo.html
+++ b/words/len-pi-laso-telo.html
@@ -100,4 +100,5 @@
         <br>ni la toki mi li pini.
         <br>ken la, mi toki lon suno kama.
         <br>mi tawa a...</p>
+        <p>↑ <a href="#">back to top</a></p>
     </div></div></body></html>
