--- a/words/nothing/starting.html
+++ b/words/nothing/starting.html
@@ -57,4 +57,5 @@
     <br>ok it's time to finish this off. thank you for reading this far!
     <br>have a good day!
     </p>
+    <p>↑ <a href="#">back to top</a></p>
     </body></html>
