--- a/words/suno.html
+++ b/words/suno.html
@@ -77,4 +77,5 @@
         <br>kalama musi pi weka sona.
         <br>tawa ni: tawa pona.
         </p>
+        <p>↑ <a href="#">back to top</a></p>
     </div></div></body></html>
