--- a/words/tomo-pi-esun-lipu.html
+++ b/words/tomo-pi-esun-lipu.html
@@ -93,4 +93,5 @@
         <br>tenpo ni la mi lon tomo mi la, toki mi li pini.
         <br>mi wile e ni: lipu ni li pona tawa sina li musi tawa sina.
         <br>mi tawa a!</p>
+        <p>↑ <a href="#">back to top</a></p>
     </div></div></body></html>
