--- a/words/vento.html
+++ b/words/vento.html
@@ -46,4 +46,5 @@
             <br>Momentos como esse me fascinam.
             <br>Um vento me lembra a vida.
         </p>
+        <p>↑ <a href="#">back to top</a></p>
     </div></div></body></html>
