--- a/blender/buttons.html
+++ b/blender/buttons.html
@@ -28,4 +28,5 @@
         <p>This was my first time doing buttons, so it's pretty basic, but i wanna do it again some other time.</p>
         <p>Edit: i did!!</p>
         <img src="/website/blender/buttons/carpediem.gif" alt="carpediem">
+        <p>↑ <a href="#">back to top</a></p>
     </div></div></body></html>
