--- a/blender/pyramids.html
+++ b/blender/pyramids.html
@@ -18,4 +18,5 @@
         <img src="/website/blender/pyramids/pyramids2.png" alt="pyramids2" width="100%">
         <img src="/website/blender/pyramids/pyramids3.png" alt="pyramids3" width="100%">
         <img src="/website/blender/pyramids/pyramids4.png" alt="pyramids4" width="100%">
+        <p>↑ <a href="#">back to top</a></p>
     </div></div></body></html>
