--- a/misc/phrases.html
+++ b/misc/phrases.html
@@ -45,4 +45,5 @@
         <div>Oh, when july arrives~</div>
         <div>Thinking optional.</div>
         <div>We're feeling pretty loopy today huh?</div>
+        <p>↑ <a href="#">back to top</a></p>
     </div></div></body></html>
