--- a/blender/cmyk.html
+++ b/blender/cmyk.html
@@ -15,4 +15,5 @@
         <img src="/website/blender/cmyk/cmyk4.png" alt="cmyk4" width="100%">
         <img src="/website/blender/cmyk/cmyk7.png" alt="cmyk7" width="100%">
         <img src="/website/blender/cmyk/cmyk8.png" alt="cmyk8" width="100%">
+        <p>↑ <a href="#">back to top</a></p>
     </div></div></body></html>
