--- a/misc/journal.html
+++ b/misc/journal.html
@@ -200,4 +200,5 @@
         <br>I guess when i make some new text in toki pona or blender render or button or something that <b>fits</b> the style of upstairs, i'll put it there.
         <br>Also i think i have to make a button, i know this site already has a bunch of buttons, but none of them <b>works</b> as a button.
     </p></div>
+    <p>↑ <a href="#">back to top</a></p>
 </div></body></html>
