--- a/words.html
+++ b/words.html
@@ -35,7 +35,7 @@
             <li><a href="words/tomo-ni">tomo ni <span class="small">(nimi 115)</span></a></li>
             <li><a href="words/suno">suno <span class="small">(nimi 218)</span></a></li>
             <li><a href="words/jan">jan <span class="small">(nimi 308)</span></a></li>
-            <li><a href="words/concreto">concreto <span class="small">(nimi 8)</span></a></li>
+            <li><a href="words/concreto">concreto <span class="small">(8 pal.)</span></a></li>
         </ul>
         </details>
         <details><summary><a>longer texts</a></summary>
