--- a/misc/phrases.html
+++ b/misc/phrases.html
@@ -45,5 +45,4 @@
         <div>Oh, when july arrives~</div>
         <div>Thinking optional.</div>
         <div>We're feeling pretty loopy today huh?</div>
-        <p>↑ <a href="#">back to top</a></p>
-    </div></div></body></html>
+    </div><p>↑ <a href="#">back to top</a></p></div></body></html>
