--- a/misc/phrases.html
+++ b/misc/phrases.html
@@ -45,4 +45,4 @@
         <div>Oh, when july arrives~</div>
         <div>Thinking optional.</div>
         <div>We're feeling pretty loopy today huh?</div>
-    </div><p>↑ <a href="#">back to top</a></p></div></body></html>
+    </div><p>^ <a href="#">back to top</a></p></div></body></html>
