--- a/sitelog.html
+++ b/sitelog.html
@@ -32,7 +32,7 @@
     <div id="entry">
         <h2>24/2/2023 18:43</h2>
         <p>I've added <a href="words/nothing">a blog thing</a>! It only has one entry, but (hopefully) i'll write more for it in the future.</p> 
-    <div id="entry">
+    </div><div id="entry">
         <h2>6/2/2023 14:45</h2>
         <p>The redesign is finally done!!!</p> 
     </div><div id="entry">
