--- a/misc/folder/index.html
+++ b/misc/folder/index.html
@@ -41,6 +41,6 @@
             <li><a href="/website/blender"><b>blender</b></a> things i've made in blender<br></li>
             <li><a href="/website/nimi-mute"><b>nimi mute</b></a> texts in toki pona<br></li>
             <li><a href="/website/playlists"><b>playlists</b></a> playlists i've made<br></li>
-            <li><a href="/website/difference"><b>difference</b></a> why it matters<br></li>
+            <li><a href="difference"><b>difference</b></a> why it matters<br></li>
             <li><a href="/website/sitelog"><b>sitelog</b></a><br></li></ul></div>
     </div></body>
