added back to top button (?)

--- a/misc/journal.html
+++ b/misc/journal.html
@@ -200,5 +200,5 @@
         <br>I guess when i make some new text in toki pona or blender render or button or something that <b>fits</b> the style of upstairs, i'll put it there.
         <br>Also i think i have to make a button, i know this site already has a bunch of buttons, but none of them <b>works</b> as a button.
     </p></div>
-    <p style="padding: 0 0 1rem 1.5rem">^ <a href="#">back to top</a></p>
+    <button onclick="topFunction()" id="topbutton" title="back to top">↑</button>
 </div></body></html>
