--- a/misc/journal.html
+++ b/misc/journal.html
@@ -201,5 +201,5 @@
         <br>Also i think i have to make a button, i know this site already has a bunch of buttons, but none of them <b>works</b> as a button.
     </p></div>
     <script src="/website/styles/back.js"></script>
-    <button onclick="topFunction()" class="back-to-top hidden" title="back to top">↑</button>
+    <button class="back-to-top hidden" title="back to top">↑</button>
 </div></body></html>
