--- a/musicians.html
+++ b/musicians.html
@@ -14,6 +14,7 @@
 
             a.bandcamp, a.spotify{font-weight: normal; text-decoration-thickness: 1px;}
             a.bandcampbold, a.spotifybold{font-weight: bold; text-decoration-thickness: 2px}
+            ul{line-height: 1.5}
         </style></head>
 
     <body><div class="page"><div class="main">
